{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1386,
  "lineage": "a7dd2240-7020-bbb5-43cd-661fea0f9fa2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:loadbalancer/app/alb/92c74e21a88753fe",
            "arn_suffix": "app/alb/92c74e21a88753fe",
            "dns_name": "alb-1748355132.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:loadbalancer/app/alb/92c74e21a88753fe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-04fa3a9d09af59d2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07440fce9352b1cf9"
              },
              {
                "subnet_id": "subnet-0f0b67115767a1422"
              }
            ],
            "subnets": [
              "subnet-07440fce9352b1cf9",
              "subnet-0f0b67115767a1422"
            ],
            "vpc_id": "vpc-0745cb7a142b984eb",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_a",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener/app/alb/92c74e21a88753fe/06a2f49aa7a3dd17",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener/app/alb/92c74e21a88753fe/06a2f49aa7a3dd17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:loadbalancer/app/alb/92c74e21a88753fe",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group_http",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_a",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener/app/alb/92c74e21a88753fe/5d5cb5a28acb33e3",
            "certificate_arn": "arn:aws:acm:us-east-2:999329133891:certificate/824b5548-b89c-4402-b604-03dac6062dd9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener/app/alb/92c74e21a88753fe/5d5cb5a28acb33e3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:loadbalancer/app/alb/92c74e21a88753fe",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group_http",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_a",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "listener_rule_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener-rule/app/alb/92c74e21a88753fe/5d5cb5a28acb33e3/ac2ba8c5afc89f3a",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "www.ovpdevops.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener-rule/app/alb/92c74e21a88753fe/5d5cb5a28acb33e3/ac2ba8c5afc89f3a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:listener/app/alb/92c74e21a88753fe/5d5cb5a28acb33e3",
            "priority": 1
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_listener.alb_listener_https",
            "aws_alb_target_group.alb_target_group_http",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_a",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
            "arn_suffix": "targetgroup/target-group-http/a77e8bb9626c2870",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-http",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd9f0e7df0f0a138",
            "arn": "arn:aws:ec2:us-east-2:999329133891:instance/i-085535c1d24816062",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085535c1d24816062",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ovpDevOpsKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e304ffaaa17bc20a",
            "private_dns": "ip-10-0-129-29.us-east-2.compute.internal",
            "private_ip": "10.0.129.29",
            "public_ip": "3.138.119.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efe03bcf6ab5e80c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07440fce9352b1cf9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e63a990e61702c6"
            ]
          },
          "dependencies": [
            "aws_iam_access_key.prometheus_access_key",
            "aws_iam_user.prometheus_iam",
            "aws_key_pair.ovpDevOpsKey",
            "aws_security_group.prometheus_access",
            "aws_subnet.subnet_public_az_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd9f0e7df0f0a138",
            "arn": "arn:aws:ec2:us-east-2:999329133891:instance/i-0d6a18eef05b6ef0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6a18eef05b6ef0b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ovpDevOpsKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-048d7b454f7db9861",
            "private_dns": "ip-10-0-146-20.us-east-2.compute.internal",
            "private_ip": "10.0.146.20",
            "public_ip": "3.19.241.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02426464253f24024",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0b67115767a1422",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e63a990e61702c6"
            ]
          },
          "dependencies": [
            "aws_iam_access_key.prometheus_access_key",
            "aws_iam_user.prometheus_iam",
            "aws_key_pair.ovpDevOpsKey",
            "aws_security_group.prometheus_access",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:999329133891:instance/i-09cf3ba43ee3c5772",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cf3ba43ee3c5772",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ovpDevOpsKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8da0e368f6a3116",
            "private_dns": "ip-10-0-142-241.us-east-2.compute.internal",
            "private_ip": "10.0.142.241",
            "public_ip": "3.139.79.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05bd282a408f7df02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07440fce9352b1cf9",
            "tags": {
              "Role": "WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e5426afcc14fd89",
              "sg-04fa3a9d09af59d2e",
              "sg-08e63a990e61702c6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ovpDevOpsKey",
            "aws_security_group.internal_access",
            "aws_security_group.prometheus_access",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_b",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:999329133891:instance/i-01592e0a025d5fb31",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01592e0a025d5fb31",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ovpDevOpsKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03de10a20c8cd6fc0",
            "private_dns": "ip-10-0-158-163.us-east-2.compute.internal",
            "private_ip": "10.0.158.163",
            "public_ip": "3.139.92.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eaa2ea8a6c6f782c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0b67115767a1422",
            "tags": {
              "Role": "WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e5426afcc14fd89",
              "sg-04fa3a9d09af59d2e",
              "sg-08e63a990e61702c6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ovpDevOpsKey",
            "aws_security_group.internal_access",
            "aws_security_group.prometheus_access",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:internet-gateway/igw-02dbb3b9dd86f64fd",
            "id": "igw-02dbb3b9dd86f64fd",
            "owner_id": "999329133891",
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_web_a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870-20210111193418953000000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
            "target_id": "i-09cf3ba43ee3c5772"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_group_http",
            "aws_instance.web_a",
            "aws_key_pair.ovpDevOpsKey",
            "aws_security_group.internal_access",
            "aws_security_group.prometheus_access",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_web_b",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870-20210111193429671700000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:999329133891:targetgroup/target-group-http/a77e8bb9626c2870",
            "target_id": "i-09cf3ba43ee3c5772"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_group_http",
            "aws_instance.web_b",
            "aws_key_pair.ovpDevOpsKey",
            "aws_security_group.internal_access",
            "aws_security_group.prometheus_access",
            "aws_security_group.web_access",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02dbb3b9dd86f64fd",
            "id": "r-rtb-013b3205c96094d451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013b3205c96094d45",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet_access",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-013b3205c96094d45",
            "owner_id": "999329133891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ovpdevops-public-routetable"
            },
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b10e94aa9028004",
            "route_table_id": "rtb-013b3205c96094d45",
            "subnet_id": "subnet-07440fce9352b1cf9"
          },
          "dependencies": [
            "aws_route_table.internet_access",
            "aws_subnet.subnet_public_az_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b51b7d0c4b97de2",
            "route_table_id": "rtb-013b3205c96094d45",
            "subnet_id": "subnet-0f0b67115767a1422"
          },
          "dependencies": [
            "aws_route_table.internet_access",
            "aws_subnet.subnet_public_az_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:security-group/sg-01e5426afcc14fd89",
            "description": "Provides web and SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e5426afcc14fd89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "internal_access",
            "name_prefix": "",
            "owner_id": "999329133891",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prometheus_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:security-group/sg-08e63a990e61702c6",
            "description": "Security group for prometheus",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e63a990e61702c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "prometheus_security_group",
            "name_prefix": "",
            "owner_id": "999329133891",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:security-group/sg-04fa3a9d09af59d2e",
            "description": "Provides web access from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fa3a9d09af59d2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_access",
            "name_prefix": "",
            "owner_id": "999329133891",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:subnet/subnet-069ca0666ad263294",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-069ca0666ad263294",
            "map_public_ip_on_launch": true,
            "owner_id": "999329133891",
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:subnet/subnet-04b8d84653c8851bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-04b8d84653c8851bf",
            "map_public_ip_on_launch": false,
            "owner_id": "999329133891",
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:subnet/subnet-07440fce9352b1cf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/20",
            "id": "subnet-07440fce9352b1cf9",
            "map_public_ip_on_launch": true,
            "owner_id": "999329133891",
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:subnet/subnet-0f0b67115767a1422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-0f0b67115767a1422",
            "map_public_ip_on_launch": true,
            "owner_id": "999329133891",
            "vpc_id": "vpc-0745cb7a142b984eb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:999329133891:vpc/vpc-0745cb7a142b984eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc1221e6e19db5e2",
            "default_route_table_id": "rtb-01e22cd177ca31203",
            "default_security_group_id": "sg-0dd8bbbaf7de2f641",
            "dhcp_options_id": "dopt-1fdf5b74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0745cb7a142b984eb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e22cd177ca31203",
            "owner_id": "999329133891"
          }
        }
      ]
    }
  ]
}